--- a/styles.css
+++ b/styles.css
@@ -600,7 +600,7 @@ progress {
 }
 
 .img-fluid {
-  max-width: 100%;
+  max-width: 75%;
   height: auto;
 }
 
@@ -11288,7 +11288,7 @@ textarea.form-control-lg {
   }
 }
 body {
-  background-image: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url("../assets/img/bg.jpg");
+  background-image: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url("../assets/img/hawaii.JPG");
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -11299,12 +11299,12 @@ p {
 }
 
 .text-faded {
-  color: #f6e1c5;
+  color: rgba(255, 255, 255, 0.7);
 }
 
 .site-heading {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+  margin-top: 3rem;
+  margin-bottom: 1.2rem;
   text-transform: uppercase;
   line-height: 1;
   font-family: "Raleway", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -11315,13 +11315,13 @@ p {
   font-weight: 800;
 }
 .site-heading .site-heading-lower {
-  font-size: 5rem;
-  font-weight: 100;
+  font-size: 4rem;
+  font-weight: 120;
   line-height: 4rem;
 }
 
 .page-section {
-  margin-top: 5rem;
+  margin-top: 11rem;
   margin-bottom: 5rem;
 }
 
@@ -11335,12 +11335,12 @@ p {
 }
 .section-heading .section-heading-lower {
   display: block;
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 100;
 }
 
 .bg-faded {
-  background-color: #f6e1c5;
+  background-color: #DCDCDC;
 }
 
 .btn-xl {
@@ -11353,7 +11353,7 @@ p {
 }
 
 #mainNav {
-  background-color: rgba(47, 23, 15, 0.9);
+  background-color: 
   font-family: "Raleway", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 #mainNav .navbar-brand {
@@ -11368,7 +11368,7 @@ p {
 }
 @media (min-width: 992px) {
   #mainNav .navbar-nav .nav-item .nav-link {
-    font-size: 0.9rem;
+    font-size: 1.3rem;  
   }
   #mainNav .navbar-nav .nav-item .nav-link:hover {
     color: rgba(255, 255, 255, 0.4);
@@ -11397,7 +11397,7 @@ p {
 .cta {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: rgba(230, 167, 86, 0.9);
+  background-color: rgba(255, 255, 255, 0.4); 
 }
 .cta .cta-inner {
   position: relative;
@@ -11417,7 +11417,7 @@ p {
 }
 
 .footer {
-  background-color: rgba(47, 23, 15, 0.9);
+  background-color: 
 }
 
 .intro {
@@ -11425,13 +11425,13 @@ p {
 }
 @media (min-width: 992px) {
   .intro .intro-img {
-    width: 75%;
-    float: right;
+    width: 60%;
+    float: right; 
   }
   .intro .intro-text {
     left: 0;
     width: 60%;
-    margin-top: 3rem;
+    margin-top: 5rem;
     position: absolute;
   }
   .intro .intro-text .intro-button {
@@ -11446,6 +11446,7 @@ p {
     width: 45%;
   }
 }
+
 
 @media (min-width: 992px) {
   .product-item .product-item-title {
